--- a/src/css/components/drawer.css
+++ b/src/css/components/drawer.css
@@ -11,32 +11,34 @@ section: Objects
   --color-drawer-header: var(--color-page);
 }
 
+.c-drawer,
 .o-drawer {
   background-color: var(--backgroundColor-drawer);
+  bottom: 0;
   box-shadow: var(--shadow-drawer);
+  left: -100%;
+  max-width: 305px;
   position: fixed;
   top: 0;
-  bottom: 0;
-  width: 85%;
-  max-width: 305px;
-  z-index: 800;
-
-  left: -100%;
   transition: left .3s ease;
+  width: 85%;
   will-change: left;
+  z-index: 800;
 
   &.is-open { left: 0; }
 }
 
+.c-drawer--right,
 .o-drawer--right {
-  right: -100%;
   left: no;
+  right: -100%;
   transition: right var(--global-duration) ease-in-out;
   will-change: right;
 
   &.is-open { right: 0; }
 }
 
+.c-drawer__close,
 .o-drawer__close {
   @apply --fade-out;
   background-color: rgba(0, 0, 0, .5);
@@ -50,6 +52,7 @@ section: Objects
   .is-open + & { @apply --fade-in; }
 }
 
+.c-drawer__header,
 .o-drawer__header {
   background-color: var(--backgroundColor-drawer-header);
   border-bottom: 1px solid var(--grey-200);
@@ -58,6 +61,7 @@ section: Objects
   padding: 0 1em;
 }
 
+.c-drawer__product,
 .o-drawer__product {
   color: var(--orange-900);
   display: inline-block;
@@ -68,10 +72,12 @@ section: Objects
   vertical-align: middle;
 }
 
+.c-drawer__group,
 .o-drawer__group {
   &:not(:last-child) { border-bottom: var(--borderColor-drawer) 1px solid; }
 }
 
+.c-drawer__action,
 .o-drawer__action {
   background-color: var(--white);
   color: var(--color-page);
@@ -91,10 +97,11 @@ section: Objects
   }
 
   .c-icon {
-    fill: var(--orange-900);
     color: var(--grey-700);
+    fill: var(--orange-900);
     margin-right: .5em;
   }
 }
 
+.c-drawer__account-name,
 .o-drawer__account-name { font-size: var(--fontSize--semiMedium); }
