--- a/src/css/components/progress.css
+++ b/src/css/components/progress.css
@@ -7,19 +7,19 @@
 
   & .c-progress__bar {
     /* Add your styles here. As part of this walkthrough we will focus only on determinate progress bars. */
+    bottom: 0;
     display: inline-block;
     position: absolute;
     top: 0;
-    bottom: 0;
     transition: width .2s cubic-bezier(.4, 0, .2, 1);
   }
 
   & .c-progress__bar:first-child,
   & .c-progress__bar:last-child {
-    background-color: var(--magenta-500);
     animation-duration: .2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    background-color: var(--purple-500);
   }
 
   & .c-progress__bar:first-child {
@@ -33,25 +33,16 @@
 
 .c-progress {
   /* Add dimensions */
-  width: 100%;
   height: 4px;
+  width: 100%;
 
   &[value] {
-    /* Get rid of the default appearance */
-    appearance: none;
-
-    /* This unfortunately leaves a trail of border behind in Firefox and Opera. We can remove that by setting the border to none. */
-    border: none;
-
-
-    /* Although firefox doesn't provide any additional pseudo class to style the progress element container, any style applied here works on the container. */
-    background-color: whiteSmoke;
-
-    /* Of all IE, only IE10 supports progress element that too partially. It only allows to change the background-color of the progress value using the 'color' attribute. */
-    color: royalblue;
-
-    position: relative;
+    appearance: none; /* Get rid of the default appearance */
+    background-color: whiteSmoke; /* Although firefox doesn't provide any additional pseudo class to style the progress element container, any style applied here works on the container. */
+    border: none; /* This unfortunately leaves a trail of border behind in Firefox and Opera. We can remove that by setting the border to none. */
+    color: royalblue; /* Of all IE, only IE10 supports progress element that too partially. It only allows to change the background-color of the progress value using the 'color' attribute. */
     margin: 0 0 1.5em;
+    position: relative;
   }
 }
 
@@ -66,10 +57,11 @@
 /* Fallback technique styles */
 .c-progress__bar {
   background-color: whiteSmoke;
-  box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, .5) inset;
 
   /* Dimensions should be similar to the parent progress element. */
-  width: 100%; height:20px;
+  height: 20px;
+  width: 100%;
 }
 
 .c-progress__bar span {
@@ -77,6 +69,7 @@
   display: block;
   text-indent: -9999px;
 }
+
 
 @keyframes indeterminate1 {
   0% {
