--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -69,8 +69,8 @@ section: Components
 
 .c-menu--top-right,
 .c-menu--top-left {
-  top: auto;
   bottom: calc(100% - 6px);
+  top: auto;
 }
 
 
@@ -78,7 +78,9 @@ section: Components
 
 
 
-  .c-menu__group:not(:last-child) { border-bottom: 1px solid var(--borderColor-inactive); }
+  .c-menu__group:not(:last-child) {
+    border-bottom: 1px solid var(--borderColor-inactive);
+  }
 
 
   .c-menu__item {
@@ -87,7 +89,9 @@ section: Components
     font-size: 15px;
     padding: .75em 1rem;
     text-align: left;
-    transition: background-color var(--global-duration) ease, color var(--global-duration) ease;
+    transition:
+      background-color var(--global-duration) ease,
+      color var(--global-duration) ease;
     width: 100%;
 
     &:--enter { background-color: var(--color-menu-link-background-enter); }
@@ -113,9 +117,9 @@ section: Components
 
   .c-menu__viewer {
     border-bottom: 1px solid var(--grey-100);
-    padding: .5em 1rem;
     max-height: 50vh;
     overflow: auto;
+    padding: .5em 1rem;
   }
 
 
@@ -130,7 +134,7 @@ section: Components
        @apply --triangle;
        @apply --triangle-bottom;
        border-width: 5px 4px 0;
-       content: '';
+       content: "";
        float: right;
        margin: 3px 0 0 12px;
        position: relative;
@@ -141,9 +145,9 @@ section: Components
   & > .c-button,
   &.c-button {
     border-bottom: var(--grey-200) 1px solid;
+    margin: 6px 0;
     text-align: left;
     text-transform: none;
-    margin: 6px 0;
     width: 100%;
 
     &::before {
@@ -151,7 +155,7 @@ section: Components
        @apply --triangle-bottom;
        border-width: 5px 4px 0;
        color: var(--grey-600);
-       content: '';
+       content: "";
        float: right;
        margin: 1em .5rem 1em .75rem;
        position: relative;
@@ -162,7 +166,7 @@ section: Components
 
 
   &:--active {
-    & > .c-button ,
+    & > .c-button,
     &.c-button {
       &::before {
         transform: rotate(180deg);
