--- a/src/css/components/pagination.css
+++ b/src/css/components/pagination.css
@@ -16,82 +16,76 @@
 
 
 .c-pagination-dots ul {
-  position: relative;
   display: inline-block;
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
+  position: relative;
 }
 
 .c-pagination-dots li {
-  position: relative;
   display: block;
   float: left;
-  margin: 0 4px;
-  width: 10px;
   height: 10px;
+  margin: 0 4px;
+  position: relative;
+  width: 10px;
 }
 
-.c-pagination-dots li:not(:last-child):before {
-  position: absolute;
-  top: 0;
-  right: 0;
+.c-pagination-dots li:not(:last-child)::before {
+  background-color: rgba(0, 0, 0, .3);
   border-radius: 50px;
-  content: '';
+  content: "";
   display: inline-block;
   height: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
   width: 10px;
-  background-color: rgba(0, 0, 0, 0.3);
 
-  .t-dark & {
-    background-color: rgba(255, 255, 255, 0.3);
-  }
+  .t-dark & { background-color: rgba(255, 255, 255, .3); }
 }
 
-.c-pagination-dots--move li span {
-  transition: background-color 0.3s ease;
-}
+.c-pagination-dots--move li span { transition: background-color .3s ease; }
 
 .c-pagination-dots li span {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
   border-radius: 50px;
-  text-indent: -999em;
+  height: 100%;
+  left: 0;
+  outline: none;
   position: absolute;
+  text-indent: -999em;
+  top: 0;
+  width: 100%;
 }
 
 .c-pagination-dots--move li:last-child {
-  position: absolute;
   left: 0;
   margin: 0;
-  width: 18px;
+  position: absolute;
   transition: transform .3s ease;
+  width: 18px;
 }
 
 .c-pagination-dots--move li:last-child::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 0;
-  width: 10px;
-  height: 10px;
-  border-radius: 100px;
   background: var(--black);
+  border-radius: 100px;
+  content: "";
+  height: 10px;
+  left: 50%;
+  position: absolute;
+  top: 0;
   transform: translateX(-50%);
+  width: 10px;
 
-  .t-dark & {
-    background: var(--white);
-  }
+  .t-dark & { background: var(--white); }
 }
 
 .c-pagination-dots--move li:not(:last-child) {
-  &:before {
-     background-color: rgba(0, 0, 0, 0.3);
+  &::before {
+     background-color: rgba(0, 0, 0, .3);
      border-radius: 50px;
-     content: '';
+     content: "";
      display: inline-block;
      height: 10px;
      position: absolute;
@@ -102,17 +96,19 @@
 }
 
 
-.c-pagination-dots--move .is-current:nth-child(1) ~ li:active:nth-child(2):before,
-.c-pagination-dots--move .is-current:nth-child(2) ~ li:active:nth-child(3):before,
-.c-pagination-dots--move .is-current:nth-child(3) ~ li:active:nth-child(4):before,
-.c-pagination-dots--move .is-current:nth-child(4) ~ li:active:nth-child(5):before,
-.c-pagination-dots--move .is-current:nth-child(5) ~ li:active:nth-child(6):before,
-.c-pagination-dots--move .is-current:nth-child(6) ~ li:active:nth-child(7):before,
-.c-pagination-dots--move .is-current:nth-child(7) ~ li:active:nth-child(8):before,
-.c-pagination-dots--move .is-current:nth-child(8) ~ li:active:nth-child(9):before,
-.c-pagination-dots--move .is-current:nth-child(9) ~ li:active:nth-child(10):before {
-  right: 0;
-  width: 28px;
+.c-pagination-dots--move .is-current {
+  &:nth-child(1) ~ li:active:nth-child(2)::before,
+  &:nth-child(2) ~ li:active:nth-child(3)::before,
+  &:nth-child(3) ~ li:active:nth-child(4)::before,
+  &:nth-child(4) ~ li:active:nth-child(5)::before,
+  &:nth-child(5) ~ li:active:nth-child(6)::before,
+  &:nth-child(6) ~ li:active:nth-child(7)::before,
+  &:nth-child(7) ~ li:active:nth-child(8)::before,
+  &:nth-child(8) ~ li:active:nth-child(9)::before,
+  &:nth-child(9) ~ li:active:nth-child(10)::before {
+    right: 0;
+    width: 28px;
+  }
 }
 
 
@@ -131,7 +127,7 @@
 }
 
 
-.c-pagination-dots__dot span { transition: background-color 0.3s ease; }
+.c-pagination-dots__dot span { transition: background-color .3s ease; }
 
 .c-pagination-dots__dots--move li span:hover,
 .c-pagination-dots__dots--move li span:focus {
