--- a/src/css/components/iconbar.css
+++ b/src/css/components/iconbar.css
@@ -3,6 +3,7 @@ title: Iconbar
 section: Objects
 ---*/
 
+.c-iconbar,
 .o-iconbar {
   @apply --position-bottom;
   background-color: var(--color-iconbar-background);
@@ -25,6 +26,7 @@ section: Objects
 }
 
 
+  .c-iconbar_item,
   .o-iconbar__item {
     @apply --center;
     background-color: transparent;
@@ -60,6 +62,7 @@ section: Objects
   }
 
 
+  .c-iconbar__label,
   .o-iconbar__label {
     display: block;
     font-size: var(--fontSize--tiny);
@@ -69,8 +72,10 @@ section: Objects
   }
 
 
+.c-iconbar--shifting,
 .o-iconbar--shifting {
 
+  .c-iconbar__item,
   .o-iconbar__item {
     .c-icon {
       position: relative;
@@ -80,14 +85,15 @@ section: Objects
     &.is-active {
       .c-icon { top: 0; }
 
-      .o-iconbar__label { @apply --fade-in; }
+      .c-iconbar__label, .o-iconbar__label { @apply --fade-in; }
     }
   }
 
-  .o-iconbar__label { @apply --fade-out; }
+  .c-iconbar__label, .o-iconbar__label { @apply --fade-out; }
 }
 
 
+.c-iconbar--rail,
 .o-iconbar--rail {
   border-right: 1px solid var(--color-iconbar-border);
   border-top: none;
@@ -97,6 +103,7 @@ section: Objects
   top: 0;
   width: 56px;
 
+  .c-iconbar__item,
   .o-iconbar__item {
     display: inline-block;
     height: 24px;
@@ -107,6 +114,6 @@ section: Objects
     width: 56px;
   }
 
-  .o-iconbar__label { opacity: 0; }
+  .c-iconbar__label, .o-iconbar__label { opacity: 0; }
 }
 
