--- a/src/css/components/iconbar.css
+++ b/src/css/components/iconbar.css
@@ -1,5 +1,4 @@
-.c-iconbar,
-.o-iconbar {
+.c-iconbar {
   @apply --position-bottom;
   background-color: var(--color-iconbar-background);
   border-top: 1px solid var(--color-iconbar-border);
@@ -21,8 +20,7 @@
 }
 
 
-  .c-iconbar_item,
-  .o-iconbar__item {
+  .c-iconbar__item {
     @apply --center;
     background-color: transparent;
     border: none;
@@ -57,8 +55,7 @@
   }
 
 
-  .c-iconbar__label,
-  .o-iconbar__label {
+  .c-iconbar__label {
     display: block;
     font-size: var(--fontSize--tiny);
     transition: all var(--global-duration) ease-in-out;
@@ -67,11 +64,9 @@
   }
 
 
-.c-iconbar--shifting,
-.o-iconbar--shifting {
+.c-iconbar--shifting {
 
-  .c-iconbar__item,
-  .o-iconbar__item {
+  .c-iconbar__item {
     .c-icon {
       position: relative;
       top: 10px;
@@ -80,16 +75,15 @@
     &.is-active {
       .c-icon { top: 0; }
 
-      .c-iconbar__label, .o-iconbar__label { @apply --fade-in; }
+      .c-iconbar__label { @apply --fade-in; }
     }
   }
 
-  .c-iconbar__label, .o-iconbar__label { @apply --fade-out; }
+  .c-iconbar__label { @apply --fade-out; }
 }
 
 
-.c-iconbar--rail,
-.o-iconbar--rail {
+.c-iconbar--rail {
   border-right: 1px solid var(--color-iconbar-border);
   border-top: none;
   display: inline-block;
@@ -98,8 +92,7 @@
   top: 0;
   width: 56px;
 
-  .c-iconbar__item,
-  .o-iconbar__item {
+  .c-iconbar__item {
     display: inline-block;
     height: 24px;
     margin: 18px 0;
@@ -109,6 +102,6 @@
     width: 56px;
   }
 
-  .c-iconbar__label, .o-iconbar__label { opacity: 0; }
+  .c-iconbar__label { opacity: 0; }
 }
 
